kubernetes/apps/base/storage/kopiur/app/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-authelia
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: storage
  to:
    - group: gateway.envoyproxy.io
      kind: Backend
      name: authelia
