kubernetes/apps/base/storage/kopiur/app/securitypolicy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: kopiur-auth
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kopiur-ui
  extAuth:
    failOpen: false
    headersToExtAuth:
      - accept
      - authorization
      - cookie
      - proxy-authorization
      - X-Forwarded-Proto
    http:
      backendRefs:
        - group: gateway.envoyproxy.io
          kind: Backend
          name: authelia
          port: 443
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
